// basic labyrinth kinda game where player goes from room to room

syntax = "proto2";

message Player {
	required int32 p_name = 1;
}

message Room{
	required string r_name = 1;
}

message Game {
	
	required Player player_info = 1;	
	required Room location = 2;
	optional int32 discovered = 3; // number of rooms found
}

		
		
	
